// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account reducer should handle the DID_SET action  1`] = `
Object {
  "claims": Immutable.Map {
    "loading": false,
    "selected": Immutable.Map {
      "credentialType": "",
      "claimData": Immutable.Map {},
      "id": "",
      "issuer": "",
      "subject": "",
    },
    "decoratedCredentials": Immutable.Map {
      "Personal": Immutable.List [
        Immutable.Map {
          "credentialType": "Name",
          "claimData": Immutable.Map {
            "firstName": "",
            "lastName": "",
          },
          "id": "",
          "issuer": "",
          "subject": "",
        },
      ],
      "Contact": Immutable.List [
        Immutable.Map {
          "credentialType": "E-mail",
          "claimData": Immutable.Map {
            "email": "",
          },
          "id": "",
          "issuer": "",
          "subject": "",
        },
        Immutable.Map {
          "credentialType": "Phone",
          "claimData": Immutable.Map {
            "phone": "",
          },
          "id": "",
          "issuer": "",
          "subject": "",
        },
      ],
    },
  },
  "did": Immutable.Map {
    "did": "mock did",
  },
  "loading": Immutable.Map {
    "loading": true,
  },
}
`;

exports[`account reducer should initialize correctly 1`] = `
Object {
  "claims": Immutable.Map {
    "loading": false,
    "selected": Immutable.Map {
      "credentialType": "",
      "claimData": Immutable.Map {},
      "id": "",
      "issuer": "",
      "subject": "",
    },
    "decoratedCredentials": Immutable.Map {
      "Personal": Immutable.List [
        Immutable.Map {
          "credentialType": "Name",
          "claimData": Immutable.Map {
            "firstName": "",
            "lastName": "",
          },
          "id": "",
          "issuer": "",
          "subject": "",
        },
      ],
      "Contact": Immutable.List [
        Immutable.Map {
          "credentialType": "E-mail",
          "claimData": Immutable.Map {
            "email": "",
          },
          "id": "",
          "issuer": "",
          "subject": "",
        },
        Immutable.Map {
          "credentialType": "Phone",
          "claimData": Immutable.Map {
            "phone": "",
          },
          "id": "",
          "issuer": "",
          "subject": "",
        },
      ],
    },
  },
  "did": Immutable.Map {
    "did": "",
  },
  "loading": Immutable.Map {
    "loading": true,
  },
}
`;
